# OpenCB

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-windows.yml  release.yml
apps/opencb_app/: README.md  l10n.yaml  pubspec.yaml
apps/opencb_app/android/app/: build.gradle.kts
apps/opencb_app/android/app/src/main/: AndroidManifest.xml
apps/opencb_app/android/app/src/main/kotlin/com/example/opencb_app/: MainActivity.kt
apps/opencb_app/android/app/src/main/res/drawable/: ic_stat_opencb.xml  launch_background.xml
apps/opencb_app/android/app/src/main/res/layout/: opencb_background_notification.xml
apps/opencb_app/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
apps/opencb_app/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
apps/opencb_app/android/app/src/main/res/values-night/: styles.xml
apps/opencb_app/android/app/src/main/res/values-vi/: strings.xml
apps/opencb_app/lib/: main.dart
apps/opencb_app/lib/l10n/: app_en.arb  app_vi.arb
apps/opencb_app/test/: widget_test.dart
apps/opencb_app/windows/: CMakeLists.txt
apps/opencb_app/windows/flutter/: generated_plugins.cmake
apps/opencb_app/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  stop_debug_instance.ps1  win32_window.cpp  win32_window.h
crates/opencb_core/: Cargo.toml
crates/opencb_core/src/: lib.rs
docs/: index.html  mvp.md  sync-lan.md  versioning-and-release.md  windows-production.md
installer/windows/: OpenCB.iss
scripts/: create_android_keystore.ps1
